--- a/ctd-esp-fe3-final/src/index.css
+++ b/ctd-esp-fe3-final/src/index.css
@@ -120,3 +120,11 @@ tr:nth-child(even) {
 .dark > a {
   color: white;
 }
+
+.estiloClaro{
+  background-color: pink;
+}
+
+.estiloOscuro{
+  background-color: green;
+}
