--- a/ctd-esp-fe3-final/src/Components/Card/Card.css
+++ b/ctd-esp-fe3-final/src/Components/Card/Card.css
@@ -1,57 +1,71 @@
 .card {
-    width: 190px;
-    height: 254px;
-    border-radius: 20px;
+    display: flex;
+    width: 260px;
+    height: 350px;
+    border-radius: 10px;
     background: #f5f5f5;
     position: relative;
-    padding: 1.8rem;
-    border: 2px solid #c3c6ce;
+    padding: 0;
     transition: 0.5s ease-out;
     overflow: visible;
     margin: 15px;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.332);
+}
+
+.card img{
+    height: 190px;
+    width: 100%;
+    border-radius: 7px 7px 0px 0px;
+    object-fit: cover;
 }
 
 .card-details {
     color: black;
-    height: 100%;
+    height: 50%;
     gap: .5em;
     display: grid;
-    place-content: center;
+    place-content: left;
+    padding: 0 10px;
 }
 
 .card-button {
-    transform: translate(-50%, 125%);
-    width: 60%;
-    border-radius: 1rem;
+    width: 100%;
+    border-radius: 0 0 7px 7px;
     border: none;
-    background-color: #008bf8;
     color: #fff;
     font-size: 1rem;
     padding: .5rem 1rem;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    opacity: 0;
-    transition: 0.3s ease-out;
+    height: 40px;
+    margin-top: 10px;
+    transition: all 0.3s;
+}
+
+.card-button:hover {
+    transition: all 0.3s;
+    height: 50px;
+    margin-top: 4px;
 }
 
 .text-body {
     color: rgb(134, 134, 134);
+    text-align: left;
 }
 
-/*Text*/
 .text-title {
-    font-size: 1.5em;
+    font-size: 1.1em;
     font-weight: bold;
 }
 
 /*Hover*/
 .card:hover {
-    border-color: #008bf8;
-    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.415);
 }
 
-.card:hover .card-button {
-    transform: translate(-50%, 50%);
-    opacity: 1;
+.isFavButton{
+    background-color: rgb(255, 84, 84);
+}
+.isNotFavButton{
+    background-color: rgb(73, 176, 255);
 }
