--- a/ctd-esp-fe3-final/src/index.css
+++ b/ctd-esp-fe3-final/src/index.css
@@ -1,10 +1,20 @@
 body {
   margin: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-between;
+  background-attachment: fixed;
 }
 
 code {
@@ -24,10 +34,54 @@ h1{
 }
 
 nav{
+  box-sizing: border-box;
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
-  padding: 1rem;
+  flex-direction: row;
+  width: 100%;
+  height: 85px;
+  padding: 1rem 7%;
+  justify-content: space-between;
+  position: sticky;
+  z-index: 1000;
+  backdrop-filter: blur(3px);
+  left: 0;
+  top: 0;
+  color: white;
+  font-weight: bold;
+  align-items: center;
+}
+
+.navDetails{
+  width: 400px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navDetails a{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0.75rem 1.25rem 0.75rem 1.25rem;
+  background-color: rgb(73, 176, 255);
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: bold;
+  height: 30px;
+  margin: 10px 0;
+  width: 70px;
+  border-radius: 0.5rem;
+  text-transform: uppercase;
+  border: none;
+  transition: all 0.3s;
+  text-align: center;
+}
+
+.navDetails a:hover{
+  transition: all 0.3s;
+  height: 40px;
+  margin: 0;
 }
 
 a{
@@ -36,20 +90,20 @@ a{
   margin: 5px;
   cursor: pointer;
 }
-a:hover{
-  color: rgb(136, 136, 136);
-} 
 
 footer {
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   text-align: center;
   padding: 2rem;
   position: relative;
   bottom: 0;
-  width: 90%;
-  height: 40px;
+  width: 100%;
+  height: 100px;
   margin-top: 2rem;
+  background-color: rgb(132, 132, 132);
+  color: #000;
 }
 
 footer > img{
@@ -59,29 +113,6 @@ footer > img{
 footer > p{
   margin: 0;
   padding-top: 0.7rem;
-}
-
-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 300px;
-  height: 100px;
-  margin: 0 auto;
-}
-
-.card{
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: center;
-  width: 200px;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  border: 0.5px solid rgb(136, 136, 136);
-}
-
-.card:hover{
-  border: 0.5px solid rgb(206, 217, 142);
 }
 
 .card-grid{
@@ -121,10 +152,11 @@ tr:nth-child(even) {
   color: white;
 }
 
-.estiloClaro{
-  background-color: pink;
-}
-
-.estiloOscuro{
-  background-color: green;
+.contactContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  align-items: center;
 }
