--- a/ctd-esp-fe3-final/src/index.css
+++ b/ctd-esp-fe3-final/src/index.css
@@ -91,6 +91,24 @@ a{
   cursor: pointer;
 }
 
+a span{
+  background-color: rgb(255, 84, 84);
+  border-radius: 30px;
+  width: 20px;
+  height: 20px;
+  position: relative;
+  bottom: 30px;
+  left: 80px;
+}
+
+#fav{
+  position: relative;
+  top: 10px;
+  left: 0;
+  background-color: transparent;
+
+}
+
 footer {
   box-sizing: border-box;
   display: flex;
