--- a/ctd-esp-fe3-final/src/Components/Form/Form.css
+++ b/ctd-esp-fe3-final/src/Components/Form/Form.css
@@ -7,7 +7,7 @@ form {
   border-radius: 0.5rem;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   backdrop-filter: blur(2px);
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 .form-title {
@@ -70,4 +70,38 @@ form {
 
 .signup-link a {
   text-decoration: underline;
+}
+
+#errorMessage{
+  background-color: rgb(247, 190, 190);
+  border: 1px solid rgb(255, 84, 84);
+}
+
+#successMessage{
+  background-color: rgb(197, 230, 255);
+  border: 1px solid rgb(73, 176, 255);
+}
+
+.snackBar{
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  z-index: 1000;
+  bottom: 150px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 0 10px 10px 0;
+}
+
+.snackBar progress{
+  width: 95%;
+  height: 10px;
+  position: relative;
+}
+
+.snackBar h4{
+  margin: 10px;
+  font-weight: 500;
 }
