--- a/ctd-esp-fe3-final/src/index.css
+++ b/ctd-esp-fe3-final/src/index.css
@@ -38,7 +38,7 @@ nav{
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 85px;
+  height: 90px;
   padding: 1rem 7%;
   justify-content: space-between;
   position: sticky;
@@ -73,15 +73,15 @@ nav{
   width: 70px;
   border-radius: 0.5rem;
   text-transform: uppercase;
-  border: none;
+  border-bottom: 3px solid white;
   transition: all 0.3s;
   text-align: center;
 }
 
 .navDetails a:hover{
   transition: all 0.3s;
-  height: 40px;
-  margin: 0;
+  height: 35px;
+  margin: 5px 0;
 }
 
 a{
@@ -97,7 +97,7 @@ a span{
   width: 20px;
   height: 20px;
   position: relative;
-  bottom: 30px;
+  bottom: 33px;
   left: 80px;
 }
 
@@ -106,7 +106,6 @@ a span{
   top: 10px;
   left: 0;
   background-color: transparent;
-
 }
 
 footer {
@@ -177,4 +176,25 @@ tr:nth-child(even) {
   text-align: center;
   width: 100%;
   align-items: center;
+}
+
+.detailContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  min-height: 70vh;
+  align-items: center;
+}
+
+.detailContent{
+  color: #fff;
+  display: flex;
+  padding: 1rem;
+  width: 350px;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(2px);
+  justify-content: space-between;
 }
